RESOLVED FIXED205339
[GTK][WPE] OffscreenCanvas worker tests that call drawImage crash in debug builds
https://bugs.webkit.org/show_bug.cgi?id=205339
Summary [GTK][WPE] OffscreenCanvas worker tests that call drawImage crash in debug bu...
Chris Lord
Reported 2019-12-17 07:59:16 PST
Any test that calls OffscreenCanvasRenderingContext2D.drawImage inside a worker will crash in debug builds for the same reasons as the crashes fixed in bug 203884 (calling copyImage, which calls code that isn't safe to run off the main thread). Again, there's no actual need to go through this code path, so the fix is to just use the shorter path that doesn't involve unnecessarily creating an Image object. Patch almost done.
Attachments
Patch (4.47 KB, patch)
2019-12-17 08:35 PST, Chris Lord
no flags
Chris Lord
Comment 1 2019-12-17 08:35:35 PST
WebKit Commit Bot
Comment 2 2019-12-18 01:02:52 PST
Comment on attachment 385893 [details] Patch Clearing flags on attachment: 385893 Committed r253675: <https://trac.webkit.org/changeset/253675>
WebKit Commit Bot
Comment 3 2019-12-18 01:02:54 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-12-18 01:03:18 PST
Note You need to log in before you can comment on or make changes to this bug.