[GTK][WPE] OffscreenCanvas worker tests that call drawImage crash in debug builds https://bugs.webkit.org/show_bug.cgi?id=205339

Patch by Chris Lord <clord@igalia.com> on 2019-12-18
Reviewed by Carlos Garcia Campos.

Don't unnecessarily create an Image object in the Cairo graphics
backend when using drawImage/drawPattern. Doing so calls code that
isn't safe to use off-main-thread and causes OffscreenCanvas worker
tests to crash in debug builds.

No new tests, no behavioral changes.

* platform/graphics/cairo/ImageBufferCairo.cpp:
(WebCore::cairoSurfaceCopy):
(WebCore::cairoSurfaceCoerceToImage):
(WebCore::ImageBuffer::draw):
(WebCore::ImageBuffer::drawPattern):

Canonical link: https://commits.webkit.org/218579@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253675 268f45cc-cd09-0410-ab3c-d52691b4dbfc